Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.0.0
	 * Save:	7
	 * Network:	8

	CommandLine:	1.0.4.1
	Flash GUI:	1.0.3.5
	Increment1GUI:	1.1.1.1
	Simple GUI:	1.1.1.1
	Swing GUI:	1.0.6.4

Risk 1.1.0.1

	in FlashGUI when u make a new game, it remembers your old player state

Risk 1.1.0.0

	new build system to allow for building both Risk and Domination
	translation tool split off from main code
	pl language added
	italian card rules added
	3 dice to defend option added
	core Domination engine split from anything UI related in the hope to create a Risk for android
	in the map editor, if a new image is loaded with a different size to the imgmap, it asks if you want to update the size of the imgmap

Risk 1.0.9.8

	no more licence in installer, as does not work in java 1.4
	In FixedCards gameMode some card trades were returning zero armies, for example {WILDCARD,WILDCARD,*}. - davet
	IT update - Orfeo Ciano
	DE update - Steffen Hornung
	better Hard AI - Cameron Macintosh
	Done - in lobby should use image factories so they dont have to keep reloading images in the GUI (RiskUtil.getUIImage)
	better applet errors in the map editor and message tool
	network update on different default maps

Risk 1.0.9.7 (06.05.2008)

	Game Name externalized
	fixed - closegame BattleDialog paintComponent hasArmiesInt NullPointerException
	improved - mid-game closegame problem when its not ur turn
	jsmooth exe installer works now
	fixed - installer gets version from build file
	help updated a bit with IDE info
	applets added to Help

Risk 1.0.9.6 (16.04.2008)

	gives error message when cant load a game
	cant highlight any country now when selecting capital
	Risk can now run FlashGUI and SwingGUI as unsigned Java Web Start
	donate button added
	gives an error message when cant connect to a server
	if there is a error loading 1 file in about box, others still load
	NullPointerException in _paintImmediately maybe fixed by using SwingUtilities.invokeLater()